[package]
name = "bench-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rpress = { path = "../engine" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
