[package]
name = "rpress"
version = "0.1.0"
edition = "2024"
description = "Lightweight async HTTP/1.1 framework built on tokio with routing, middleware, streaming, compression, CORS and rate limiting"
license = "MIT"
repository = "https://github.com/guilhermecampos/rpress"
keywords = ["http", "server", "async", "framework", "tokio"]
categories = ["web-programming::http-server", "asynchronous"]
readme = "../README.md"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
regex = "1.12.3"
chrono = "0.4.44"
flate2 = "1"
brotli = "7"

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
flate2 = "1"
brotli = "7"