[package]
name = "rpress"
version = "0.4.2"
edition = "2024"
description = "Lightweight async HTTP/1.1 and HTTP/2 framework built on tokio with TLS (rustls), routing, middleware, streaming, compression, CORS and rate limiting"
license = "MIT"
repository = "https://github.com/Guilherme-j10/rpress"
keywords = ["http", "server", "async", "framework", "tokio"]
categories = ["web-programming::http-server", "asynchronous"]
readme = "../README.md"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
regex = "1.12.3"
chrono = "0.4.44"
flate2 = "1"
brotli = "7"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
h2 = "0.4"
http = "1"
bytes = "1"
tokio-tungstenite = "0.26"
sha1 = "0.10"
base64 = "0.22"
dashmap = "6"
futures-util = "0.3"
redis = { version = "1", features = ["tokio-comp", "aio"], optional = true }

[features]
default = []
redis = ["dep:redis"]

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
flate2 = "1"
brotli = "7"
rcgen = "0.13"
tokio-rustls = "0.26"
rustls-pki-types = "1"
h2 = "0.4"
http = "1"
tokio-tungstenite = "0.26"
futures-util = "0.3"